RESOLVED FIXED272300
WPT dom/events/shadow-relatedTarget.html fails partially
https://bugs.webkit.org/show_bug.cgi?id=272300
Summary WPT dom/events/shadow-relatedTarget.html fails partially
Tetsuharu Ohzeki [UTC+9]
Reported 2024-04-07 07:20:10 PDT
https://wpt.fyi/results/dom/events/shadow-relatedTarget.html?label=master&label=experimental&aligned is still failed on "relatedTarget should not leak at capturing phase, at window object." That test was introduced by https://github.com/web-platform-tests/wpt/pull/13235
Attachments
Tetsuharu Ohzeki [UTC+9]
Comment 1 2024-04-07 07:20:39 PDT
I'm tackling to fix this...
Tetsuharu Ohzeki [UTC+9]
Comment 2 2024-04-07 09:52:16 PDT
Radar WebKit Bug Importer
Comment 3 2024-04-14 07:21:14 PDT
EWS
Comment 4 2024-04-28 12:29:24 PDT
Committed 278090@main (764534676c1a): <https://commits.webkit.org/278090@main> Reviewed commits have been landed. Closing PR #26953 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.